Add JavaFX sample detection UI